@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -321,7 +321,7 @@ public class AvoidEscapedUnicodeCharactersCheck
         else {
             final List<TextBlock> commentList = blockComments.get(lineNo);
             if (commentList != null) {
-                final TextBlock comment = commentList.get(commentList.size() - 1);
+                final TextBlock comment = commentList.getLast();
                 final int[] codePoints = getLineCodePoints(lineNo - 1);
                 result = isTrailingBlockComment(comment, codePoints);
             }
