@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -24,6 +24,7 @@ import static org.junit.jupiter.api.Assumptions.assumeFalse;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLStreamHandler;
@@ -36,6 +37,7 @@ import org.junit.jupiter.api.Test;
 import org.junitpioneer.jupiter.DefaultLocale;
 
 import com.puppycrawl.tools.checkstyle.LocalizedMessage.Utf8Control;
+import com.puppycrawl.tools.checkstyle.internal.utils.TestUtil;
 
 /**
  * Custom class loader is needed to pass URLs to pretend these are loaded from the classpath
@@ -113,7 +115,7 @@ public class LocalizedMessageTest {
                 return inputStream;
             }
         };
-        final URL url = new URL("test", null, 0, "", new URLStreamHandler() {
+        final URL url = URL.of(URI.create("test:///"), new URLStreamHandler() {
             @Override
             protected URLConnection openConnection(URL u) {
                 return urlConnection;
@@ -170,7 +172,7 @@ public class LocalizedMessageTest {
                 return inputStream;
             }
         };
-        final URL url = new URL("test", null, 0, "", new URLStreamHandler() {
+        final URL url = URL.of(URI.create("test:///"), new URLStreamHandler() {
             @Override
             protected URLConnection openConnection(URL u) {
                 return urlConnection;
@@ -195,7 +197,7 @@ public class LocalizedMessageTest {
 
     @Test
     public void testBundleReloadUrlNotNullStreamNull() throws IOException {
-        final URL url = new URL("test", null, 0, "", new URLStreamHandler() {
+        final URL url = URL.of(URI.create("test:///"), new URLStreamHandler() {
             @Override
             protected URLConnection openConnection(URL ignore) {
                 return null;
@@ -273,6 +275,17 @@ public class LocalizedMessageTest {
     private static LocalizedMessage createSampleViolation() {
         return new LocalizedMessage("com.puppycrawl.tools.checkstyle.checks.coding.messages",
                 LocalizedMessage.class, "empty.statement");
+    }
+
+    @Test
+    public void testArgsFieldIsSetToNullWhenArgsIsNull() {
+        final LocalizedMessage message = new LocalizedMessage(Definitions.CHECKSTYLE_BUNDLE,
+                DefaultLogger.class, "DefaultLogger.addException", (Object[]) null);
+        final Object[] args = TestUtil.getInternalState(message, "args", Object[].class);
+
+        assertWithMessage("Args field should be null when null args are passed")
+                .that(args)
+                .isNull();
     }
 
     @AfterEach
