@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -67,7 +67,7 @@ public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
     private static final Path XDOC_CHECKS_DIR = Path.of("src", "site", "xdoc", "checks");
 
     @Override
-    protected String getPackageLocation() {
+    public String getPackageLocation() {
         return "com.puppycrawl.tools.checkstyle.internal";
     }
 
@@ -374,7 +374,7 @@ public class XdocsCategoryIndexTest extends AbstractModuleTestSupport {
                                        Map<String, CheckIndexInfo> indexedChecks) {
         final List<Element> cellElements = getChildrenElementsByTagName(rowElement, "td");
         if (cellElements.size() >= 2) {
-            final Element nameCell = cellElements.get(0);
+            final Element nameCell = cellElements.getFirst();
             final Element descCell = cellElements.get(1);
 
             getFirstChildElementByTagName(nameCell, "a").ifPresent(anchorElement -> {
